# Steam_Idle_Picker

./: .gitignore  Cargo.toml  README.md  Steam_Idle_Picker.sln  index.html  package-lock.json  package.json  vite.config.ts
SteamIdle/: Program.cs  SteamIdle.csproj
SteamIdlePicker/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SteamIdlePicker.csproj
SteamIdlePicker/Models/: AppSettings.cs  GameCache.cs  SteamGame.cs
SteamIdlePicker/Resources/: Strings.en.xaml  Strings.ja.xaml  Theme.Dark.xaml  Theme.Light.xaml
SteamIdlePicker/Services/: GameCacheService.cs  IdleManager.cs  LanguageService.cs  SettingsService.cs  SteamLibraryService.cs  VdfParser.cs
SteamIdlePicker/SteamClient/: INativeWrapper.cs  NativeClass.cs  NativeStrings.cs  NativeWrapper.cs  SteamClientSession.cs  SteamLoader.cs
SteamIdlePicker/SteamClient/Interfaces/: ISteamApps001.cs  ISteamApps008.cs  ISteamClient018.cs
SteamIdlePicker/SteamClient/Wrappers/: SteamApps001.cs  SteamApps008.cs  SteamClient018.cs
SteamIdlePicker/ViewModels/: GameItemViewModel.cs  MainViewModel.cs  RelayCommand.cs
docs/: TAURI_REWRITE_SPEC.md
scripts/: copy-engine.mjs
src/: App.tsx  Titlebar.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  idle_manager.rs  lib.rs  main.rs  models.rs
src-tauri/src/services/: mod.rs  steam_library.rs  storage.rs  vdf.rs
src-tauri/src/steam_client/: loader.rs  mod.rs  native.rs
src/i18n/: strings.ts
src/styles/: app.css
steam-idle/: Cargo.toml
steam-idle/src/: main.rs
